src/objects/loan__Misc_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>loan__Misc_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>loan__Misc_Account__c</referenceTo>
        <relationshipLabel>Misc Transactions</relationshipLabel>
        <relationshipName>Misc_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Parent_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Transaction</label>
        <referenceTo>loan__Misc_Transaction__c</referenceTo>
        <relationshipLabel>Misc Transactions</relationshipLabel>
        <relationshipName>Misc_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__To_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Misc Transactions</relationshipLabel>
        <relationshipName>Misc_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reserve Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserve Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Misc Transaction</label>
    <nameField>
        <displayFormat>MTID-{0000000000}</displayFormat>
        <label>Misc Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Misc Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>